--- a/weekviewlib/src/main/res/layout/week_layout.xml
+++ b/weekviewlib/src/main/res/layout/week_layout.xml
@@ -9,15 +9,34 @@
         android:id="@+id/tv_current_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:textColor="#333333"
         android:textSize="23sp"
         tools:text="2018年11月" />
 
-    <com.xwtec.weekviewlib.view.WeekViewPager
-        android:id="@+id/week_view_pager"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/left" />
+
+        <com.xwtec.weekviewlib.view.WeekViewPager
+            android:id="@+id/week_view_pager"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/iv_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/right" />
+    </LinearLayout>
+
 
 </LinearLayout>
